--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -305,7 +305,8 @@
             }
             function pageScroll() {
                 objDiv.scrollTop = objDiv.scrollTop + 5;
-                time = setTimeout('pageScroll()', 500);
+                // time = setTimeout('pageScroll()', 500); tiempo correcto para los videos
+                time = setTimeout('pageScroll()', 800);
             }
 
             function startCount() {
