resourse bundle de un letrero

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -104,6 +104,7 @@
             var player;
             var totalRespuestasTranscripcion = 0;
             var ordenarPalabras = document.querySelector('.order-words');
+            var mensajeRestriccion = "#{alumno['title.description.full.request']}";
 
             function onYouTubeIframeAPIReady() {
                 videoPlayer.forEach(function (video) {
