se ocultan apodos

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -143,7 +143,7 @@
                 </table>
             </div>
         </h:panelGroup>
-        <h:panelGroup layout="block" id="apodos-filas">
+        <h:panelGroup layout="block" id="apodos-filas" style="display: none">
             <ul id="apodos">
                     <ui:repeat value="#{agregarCsvControlador.apodos}" var="apodo">
                         <li>${apodo}</li>
