csv correcion problema

--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -70,7 +70,7 @@
                 </div>
                 <h:panelGroup layout="block" id="cupo-alumnos">
                     <div class="titulo-section uk-text-center uk-text-bold uk-text-capitalize">Cupo de alumnos</div>
-                    <progress max="${agregarCsvControlador.totalAlumno}" value="${grupoAlumnoControlador.alumnosAsignado}"/>
+                    <progress max="${agregarCsvControlador.totalAlumno}" value="${agregarCsvControlador.alumnosAsignado}"/>
                     <span>${agregarCsvControlador.alumnosAsignado}/${grupoAlumnoControlador.totalAlumno}</span>
                 </h:panelGroup>
                 <div class="uk-margin-medium-top">
