--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -388,7 +388,7 @@
                 </h:panelGroup>
 
                 <div class="uk-modal-footer uk-text-right">
-                    <button class="boton-escuadron-base-secundary" id="boton" type="button">Descardar</button>
+                    <button class="boton-escuadron-base-secundary" id="boton" type="button">Descargar</button>
                     <button class="boton-maestro-base uk-modal-close" type="button">Close</button>
                 </div>
             </div>
