--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -402,7 +402,7 @@
             }
         </script>
         <h:outputScript library="js" name="alumno/transcripcion.js"/>
-        <h:outputScript library="js" name="alumno/activity.js"/>
+<!--        <h:outputScript library="js" name="alumno/activity.js"/>-->
     </ui:define>
     <ui:define name="enlaces-js">
         <h:outputScript library="js" name="/alumno/drag-prueba.js"/>
