implementacion de bordes en mapa mental4 y sus placeholder de escriba texto, dar un width a los contenedores de relacionar imagen-palabra y quitar un 1 que estaba en el archivo activity.

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -187,7 +187,7 @@
                                 <div uk-dropdown="mode: click">#{alumno['activity.help.message.words']}</div>
                             </div>
                             <h1 class="uk-text-center lescuadron" style="color: white"> #{alumno['activities.word.order.instruction.title']}</h1>
-                            <div class="imagen-ordenar"> 1
+                            <div class="imagen-ordenar">
                                 <h:graphicImage library="img" name="mounstro/whom.svg"/>
                             </div>
                             <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center menu-ordenar scroll-drag" uk-switcher="">
