estilos a los iconos de los cards de asignacion de actividades a los grupos.

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -98,9 +98,9 @@
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}">
                                         <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
                                                     <span data-uk-tooltip="title: Grammar"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
-                                                    <span uk-icon="icon: file-text" data-uk-tooltip="title:Didactic Guide"/>
-                                                    <span uk-icon="icon: commenting" data-uk-tooltip="title: Cards"/>
-                                                    <span uk-icon="icon: file-edit" data-uk-tooltip="title: Think-Develop and Share"/>
+                                                    <span data-uk-tooltip="title:Didactic Guide" uk-icon="icon: file-text"/>
+                                                    <span data-uk-tooltip="title: Cards" uk-icon="icon: commenting"/>
+                                                    <span data-uk-tooltip="title: Think-Develop and Share" uk-icon="icon: file-edit"/>
                                             <ui:remove>
                                                 <div class="uk-width-expand ">
                                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
