svg principal para la landing no se veia completo en monitores 4k.

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
 	<h:outputStylesheet library="css" name="uikit.css"/>
 	<h:outputStylesheet library="css" name="landing-esquadron.css"/>
 </h:head>
-<h:body>
+<h:body style="min-height: calc(100vh);">
 	<ui:remove>
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
 	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
