--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -14,7 +14,7 @@
         </f:metadata>
         <ui:define name="menu">
             <div>
-                <ul class="uk-subnav nav-sub uk-visible@m " >
+                <ul class="uk-subnav nav-sub uk-visible@m" >
                     <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
                     <li><span>Assign Activity</span></li>
                     <li class="borde-menu1">
@@ -34,12 +34,26 @@
                 </div>
             </div>
 
+
         </ui:define>
         <ui:define name="contenido">
             <h:outputStylesheet library="css" name="/profesor/biblioteca-profesor.css"/>
             <h:outputStylesheet library="css" name="/profesor/scroll-profesor.css"/>
             <h:outputStylesheet library="css" name="/profesor/asignar-actividad.css"/>
-            <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Assign Activity</h1></div>
+            <div class="uk-position-relative uk-margin-small-top" id="temario">
+                <div class="uk-position-absolute uk-animation-slide-top-medium">
+                    <div class="uk-flex uk-flex-right">
+                        <span uk-icon="icon: close; ratio: 1.2"/>
+                    </div>
+                    <ul class="uk-breadcrumb">
+
+                    </ul>
+                </div>
+            </div>
+            <div class="uk-margin-large-top uk-flex uk-flex-between uk-flex-wrap">
+                <h1 class="uk-margin-top lescuadron">Assign Activity</h1>
+                <span class="boton-escuadron-base">Temary</span>
+            </div>
             <div class="uk-container" data-uk-filter="target: .js-filter">
                 <div class="uk-width-1-1@m uk-margin-medium-top">
                     <form id="search-form" action="">
@@ -70,7 +84,7 @@
                 </div>
                 <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
                     <ui:repeat value="#{asignarActividadControlador.actividadModeloLista}" var="actividadModelo">
-                        <li class="#{actividadModelo.nivelLenguaje}" data-tags="#{actividadModelo.preguntaDetonadora.toLowerCase()}" data-actividad="#{actividadModelo.idActividad}">
+                        <li class="#{actividadModelo.nivelLenguaje}" data-tags="#{actividadModelo.preguntaDetonadora.toLowerCase()} #{actividadModelo.tema.toLowerCase()}" data-actividad="#{actividadModelo.idActividad}">
                             <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguaje}"  >
                                 <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border">
                                     <div class="uk-card-header border-card">
@@ -78,9 +92,9 @@
                                             <div class="uk-width-expand">
                                                 <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
                                                 <span class="cat-txt ">#{actividadModelo.nivelLenguaje}</span>
+                                                <span class="uk-text-center">#{actividadModelo.tema}</span>
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted">
-                                                <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>90
                                                 <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
                                             </div>
                                         </h:panelGroup>
@@ -148,8 +162,8 @@
         </ui:define>
         <ui:define name="file-js">
             <script src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
-            <h:outputScript library="js" name="/alumno/filtro.js"/>
             <h:outputScript library="js" name="profesor/asignar-actividad.js"/>
+            <h:outputScript library="js" name="/alumno/filtro.js"/>
         </ui:define>
     </ui:composition>
 </html>
