--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -223,7 +223,7 @@
                                 </div>
                                 <div class="video-activity">
                                    <ui:remove><div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div></ui:remove>
-                                    <iframe  width="100%" height="100%" src="http://www.youtube.com/embed/#{alumnoControlador.tareaActividadModelo.idActividad}"
+                                    <iframe  width="100%" height="100%" src="https://www.youtube.com/embed/#{alumnoControlador.tareaActividadModelo.idActividad}"
                                             frameborder="0" class="scrollFinal"></iframe>
                                 </div>
                                 <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
@@ -266,6 +266,7 @@
             var mensajeError = "#{alumno['send.message.error']}";
             var mensajeTrnascripcion = "#{alumno['send.message.transcript']}";
             var tag = document.createElement('script');
+            var temporal;
             tag.src = "https://www.youtube.com/iframe_api";
             var firstScriptTag = document.getElementsByTagName('script')[0];
             firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
